src/objects/copado__User_Story__c.object
<CustomObject>
    <description>Agile form of requirements gathering</description>
    <fields>
        <fullName>Code_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Code Review Completed</description>
        <label>Code Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommitCount__c</fullName>
        <description>User Story Commit count</description>
        <inlineHelpText>User Story Commit count</inlineHelpText>
        <label>Commit Count</label>
        <summaryForeignKey>copado__User_Story_Commit__c.copado__User_Story__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ConflictCommits__c</fullName>
        <description>Commits with Conflicts</description>
        <label>Conflict Commits</label>
        <summaryFilterItems>
            <field>copado__User_Story_Commit__c.Status__c</field>
            <operation>equals</operation>
            <value>Conflict</value>
        </summaryFilterItems>
        <summaryForeignKey>copado__User_Story_Commit__c.copado__User_Story__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Deployment_Flow_State__c</fullName>
        <description>Warning indicator to help avoid commits when the deployment flow is inactive</description>
        <formula>IF((NOT(ISBLANK(copado__Release__c)) &amp;&amp; NOT(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Active__c)) ||( NOT(ISBLANK( copado__Project__c )) &amp;&amp; 
NOT( copado__Project__r.copado__Deployment_Flow__r.copado__Active__c)),&apos;##############WARNING NOT COMMIT - the deployment flow is INACTIVE!!!!!!!!!!!!!&apos;,&apos;Good&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Never commit files when the Deployment flow is Inactive!</inlineHelpText>
        <label>Deployment Flow State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FeatureBranch__c</fullName>
        <formula>IF( CommitCount__c == 0,&apos;No commits&apos;,
  copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.WebURI__c + &apos;/feature/&apos;+ Name 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feature Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GitFeatureBranch__c</fullName>
        <description>A convenience link to navigate to the Git Repository&apos;s feature branch where the changes in this story have been captured</description>
        <formula>IF( CommitCount__c &gt; 0,
HYPERLINK(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.WebURI__c 
+ &apos;/tree/feature/&apos; 
+ Name,&apos;Review Feature Branch&apos;),
&apos;No commits&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Click on the link to review the changes contained in this story.</inlineHelpText>
        <label>Git Feature Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasManualDeploymentSteps__c</fullName>
        <description>Checked if there are any Manual Deployment Steps defined for this User Story</description>
        <formula>ManualDeploymentStepCount__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Manual Deployment Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManualDeploymentStepCount__c</fullName>
        <description>Rollup summary field with a count of the Manual Deployment steps associated with this User Story.  The intention is to be able to quickly identify stories that have Manual steps.</description>
        <label>Manual Deployment Step Count</label>
        <summaryForeignKey>copado__Deployment_Task__c.copado__User_Story__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OverrideApexCoverageThreshold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Override the default Apex Test coverage validation rule</description>
        <inlineHelpText>Override the default Apex Test coverage validation rule - allows code to be promoted in special circumstances when the code coverage threshold cannot be met.</inlineHelpText>
        <label>Override Apex Coverage Threshold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REM_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>REM Review of the User Story Manual Tasks has been completed.  Used in Approval Process Flow.</description>
        <label>REM Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solution_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Solution Review Completed</description>
        <label>Solution Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Acceptance_Criteria_Status__c</fullName>
        <label>Acceptance Criteria Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Acceptance_Criteria__c</fullName>
        <label>Acceptance Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__Apex_Code_Coverage__c</fullName>
        <label>Apex Code Coverage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Business_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories_BA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__Classes_Without_Coverage__c</fullName>
        <label>Classes Without Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Compliance_Criteria__c</fullName>
        <label>Compliance Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Data_Privacy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Privacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Stories (Developer)</relationshipLabel>
        <relationshipName>User_Stories_developer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Epic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Epic</label>
        <referenceTo>copado__Epic__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Exclude_From_CBM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this user story will not be included in the count of user stories ahead and behind.</description>
        <inlineHelpText>If checked, this user story will not be included in the count of user stories ahead and behind.</inlineHelpText>
        <label>Exclude From CBM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Failing_Methods__c</fullName>
        <label>Failing Methods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Functional_Specifications__c</fullName>
        <label>Functional Specifications</label>
        <length>30000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>copado__Has_Apex_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Apex Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Metadata_Types_in_Selection__c</fullName>
        <label>Metadata Types in Selection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ActionLinkGroupTemplate</fullName>
                </value>
                <value>
                    <fullName>AnalyticSnapshot</fullName>
                </value>
                <value>
                    <fullName>ApexClass</fullName>
                </value>
                <value>
                    <fullName>ApexComponent</fullName>
                </value>
                <value>
                    <fullName>ApexPage</fullName>
                </value>
                <value>
                    <fullName>ApexTrigger</fullName>
                </value>
                <value>
                    <fullName>AppMenu</fullName>
                </value>
                <value>
                    <fullName>ApprovalProcess</fullName>
                </value>
                <value>
                    <fullName>AssignmentRule</fullName>
                </value>
                <value>
                    <fullName>AssignmentRules</fullName>
                </value>
                <value>
                    <fullName>AuraDefinitionBundle</fullName>
                </value>
                <value>
                    <fullName>AuthProvider</fullName>
                </value>
                <value>
                    <fullName>AutoResponseRule</fullName>
                </value>
                <value>
                    <fullName>AutoResponseRules</fullName>
                </value>
                <value>
                    <fullName>BusinessProcess</fullName>
                </value>
                <value>
                    <fullName>CallCenter</fullName>
                </value>
                <value>
                    <fullName>Certificate</fullName>
                </value>
                <value>
                    <fullName>ChannelLayout</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>CompactLayout</fullName>
                </value>
                <value>
                    <fullName>ConnectedApp</fullName>
                </value>
                <value>
                    <fullName>CorsWhitelistOrigin</fullName>
                </value>
                <value>
                    <fullName>CustomApplication</fullName>
                </value>
                <value>
                    <fullName>CustomField</fullName>
                </value>
                <value>
                    <fullName>CustomLabel</fullName>
                </value>
                <value>
                    <fullName>CustomLabels</fullName>
                </value>
                <value>
                    <fullName>CustomMetadata</fullName>
                </value>
                <value>
                    <fullName>CustomObject</fullName>
                </value>
                <value>
                    <fullName>CustomObjectTranslation</fullName>
                </value>
                <value>
                    <fullName>CustomPageWebLink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Minimum_Apex_Code_Coverage__c</fullName>
        <defaultValue>0.75</defaultValue>
        <label>Minimum Apex Code Coverage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org Credential</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>User Stories (Org Credential)</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Parent_Epic_Title__c</fullName>
        <formula>copado__Epic__r.copado__Epic_Title__c</formula>
        <label>Parent Epic Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Priority__c</fullName>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>copado__Project__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Promote_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promote Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Promote_and_Deploy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When this checkbox is checked, a promotion and deployment of this User Story will be started.</inlineHelpText>
        <label>Promote and Deploy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Promote_as_Single_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promote as Single Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Promotion_Test_Level__c</fullName>
        <label>Promotion Test Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NoTestRun</fullName>
                    <default>true</default>
                    <label>NoTestRun</label>
                </value>
                <value>
                    <fullName>RunSpecifiedTests</fullName>
                </value>
                <value>
                    <fullName>RunLocalTests</fullName>
                </value>
                <value>
                    <fullName>RunAllTestsInOrg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__QR_Code__c</fullName>
        <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chs=150x150&amp;cht=qr&amp;chl=&apos;+
  SUBSTITUTE(LEFT($Api.Partner_Server_URL_310, 
    FIND( &apos;/services&apos;, $Api.Partner_Server_URL_310)
  )+Id, 
    &apos;https://&apos;, 
    &apos;https%3A%2F%2F&apos;
  ),
&apos;Scan the QR code to create contact in your mobile&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>copado__Release__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>copado__Sprint__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending Design/Review of What&apos;s Built Meeting</fullName>
                </value>
                <value>
                    <fullName>Solution Review Completed</fullName>
                </value>
                <value>
                    <fullName>Awaiting Approval</fullName>
                    <label>Awaiting Component Review Approval</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Ready for testing</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Recapture</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Component Review Completed</fullName>
                </value>
                <value>
                    <fullName>Pending REM Review</fullName>
                </value>
                <value>
                    <fullName>REM Review Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Stop_Indexing_Metadata__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to Stop Indexing Metadata in Copado&apos;s Overlap Awareness.</description>
        <inlineHelpText>Check to Stop Indexing Metadata in Copado&apos;s Overlap Awareness.</inlineHelpText>
        <label>Stop Indexing Metadata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Story_Points_Other__c</fullName>
        <label>Story Points Other</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Story_Points_SFDC__c</fullName>
        <label>Story Points SFDC</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Technical_Specifications__c</fullName>
        <label>Technical Specifications</label>
        <length>30000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>copado__Test_Script_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Script Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Stories (Test Script Owner)</relationshipLabel>
        <relationshipName>User_Stories_TestScriptOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Total_Story_Points__c</fullName>
        <formula>copado__Story_Points_SFDC__c+copado__Story_Points_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Story Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Triggers_Without_Coverage__c</fullName>
        <label>Triggers Without Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__User_Story_Title__c</fullName>
        <label>User Story Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Validate_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will create a validation deployment.  When checked, Git metadata and regular metadata will be merged to create 1 validation deployment.</inlineHelpText>
        <label>Validate Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__View_in_Git__c</fullName>
        <formula>HYPERLINK(IF(AND(NOT(ISNULL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c )), copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c  != &apos;&apos;), copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c  + &apos;feature/&apos; + Name ,&apos;&apos;), &apos;feature/&apos; + Name)</formula>
        <label>View in Git</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__userStory_Role__c</fullName>
        <label>As a...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__userStory_need__c</fullName>
        <label>Want to...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__userStory_reason__c</fullName>
        <label>So that...</label>
        <type>TextArea</type>
    </fields>
    <label>User Story</label>
    <listViews>
        <fullName>All_LTC_User_Stories</fullName>
        <columns>NAME</columns>
        <columns>External_Id__c</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Promote_Change__c</columns>
        <columns>copado__Environment__c</columns>
        <columns>copado__Org_Credential__c</columns>
        <columns>HasManualDeploymentSteps__c</columns>
        <columns>copado__Release__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Project__c</field>
            <operation>equals</operation>
            <value>LTC Portal</value>
        </filters>
        <label>All LTC User Stories</label>
    </listViews>
    <listViews>
        <fullName>C1_Production</fullName>
        <columns>NAME</columns>
        <columns>copado__Environment__c</columns>
        <columns>copado__Status__c</columns>
        <columns>External_Id__c</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>HasManualDeploymentSteps__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Environment__c</field>
            <operation>equals</operation>
            <value>INS-PROD</value>
        </filters>
        <label>CustomerOne Stories Released in Prod</label>
    </listViews>
    <listViews>
        <fullName>CESITApproval</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>copado__Environment__c</columns>
        <columns>NAME</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>copado__Metadata_Types_in_Selection__c</columns>
        <columns>copado__Has_Apex_Code__c</columns>
        <columns>copado__Apex_Code_Coverage__c</columns>
        <columns>HasManualDeploymentSteps__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Promote_Change__c</columns>
        <columns>copado__Release__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>copado__Org_Credential__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Cancelled</value>
        </filters>
        <filters>
            <field>copado__Environment__c</field>
            <operation>contains</operation>
            <value>CEDEV6</value>
        </filters>
        <filters>
            <field>copado__Environment__c</field>
            <operation>contains</operation>
            <value>CESIT2</value>
        </filters>
        <label>CE Approval - Design/Manifest</label>
    </listViews>
    <listViews>
        <fullName>JHAS_Code_Reviewers_User_Story</fullName>
        <filterScope>Queue</filterScope>
        <label>JHAS Code Reviewers</label>
        <queue>JHAS_Code_Reviewers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JHAS_Solution_Reviewers_User_Story</fullName>
        <filterScope>Queue</filterScope>
        <label>JHAS Solution Reviewers</label>
        <queue>JHAS_Solution_Reviewers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>REM_Reviewers_User_Story</fullName>
        <filterScope>Queue</filterScope>
        <label>REM Reviewers</label>
        <queue>REM_Reviewers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>User_Stories_with_Commits_Not_in_PROD</fullName>
        <columns>NAME</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Promote_Change__c</columns>
        <columns>CommitCount__c</columns>
        <columns>ManualDeploymentStepCount__c</columns>
        <columns>copado__Environment__c</columns>
        <columns>copado__Release__c</columns>
        <columns>copado__Project__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </filters>
        <filters>
            <field>CommitCount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>copado__Environment__c</field>
            <operation>notEqual</operation>
            <value>INS-PROD</value>
        </filters>
        <label>User Stories with Commits Not in PROD</label>
    </listViews>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Promote_Change__c</columns>
        <columns>copado__Environment__c</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Release__c</columns>
        <columns>copado__Has_Apex_Code__c</columns>
        <columns>HasManualDeploymentSteps__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>US-{0000000}</displayFormat>
        <label>User Story Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <recordTypes>
        <fullName>Active</fullName>
        <active>true</active>
        <description>Active User Story Record Type</description>
        <label>Active</label>
    </recordTypes>
    <recordTypes>
        <fullName>Review</fullName>
        <active>true</active>
        <description>Review Record Type</description>
        <label>Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__Bug</fullName>
        <active>true</active>
        <label>Bug</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__Investigation</fullName>
        <active>true</active>
        <label>Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__User_Story</fullName>
        <active>true</active>
        <label>User Story</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Apex_Code_Coverage_with_Override</fullName>
        <active>true</active>
        <description>If Apex Code is included it must meet the coverage minimum or you cannot promote unless you get override approval</description>
        <errorConditionFormula>AND(
  copado__Has_Apex_Code__c = true,
  NOT(OverrideApexCoverageThreshold__c),
  PRIORVALUE(copado__Promote_Change__c) = false, 
  copado__Promote_Change__c = true,
  OR(
    ISNULL(copado__Apex_Code_Coverage__c),
    ISNULL(copado__Minimum_Apex_Code_Coverage__c),
    copado__Apex_Code_Coverage__c &lt; copado__Minimum_Apex_Code_Coverage__c
  )
)</errorConditionFormula>
        <errorMessage>Apex code must meet code coverage minimums to be promoted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Approval_Requires_Reviews</fullName>
        <active>true</active>
        <description>Overall Status cannot be Approved unless the Solution and Design Reviews have been completed</description>
        <errorConditionFormula>AND(ISPICKVAL(copado__Status__c, &apos;Approved&apos;)
,NOT(AND( Solution_Review_Completed__c
,IF(copado__Has_Apex_Code__c,Code_Review_Completed__c,true)
,IF( ManualDeploymentStepCount__c &gt; 0, REM_Review_Completed__c,true)
)))</errorConditionFormula>
        <errorMessage>Can&apos;t set to Approved unless Solution, Code, and REM Reviews are Completed.
Code review is only required if Has Apex Code = true
REM Review is only required if Manual Step Count &gt; 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Conflict_Commits</fullName>
        <active>true</active>
        <description>Cannot Promote with Conflict Commits unresolved.</description>
        <errorConditionFormula>AND( ConflictCommits__c &gt; 0 
, OR( copado__Promote_Change__c 
, copado__Promote_and_Deploy__c ) 
)</errorConditionFormula>
        <errorMessage>Cannot Promote this Story with unresolved Conflict Commits.     Conflict Commits can be resolved by creating a Git Pull Request to merge the Feature Branch into the Base Branch.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Illegal_Characters_in_User_Story_Title</fullName>
        <active>true</active>
        <description>Illegal_Characters_in_User_Story_Title can cause failures in Commit Files</description>
        <errorConditionFormula>CONTAINS( copado__User_Story_Title__c , &apos;#&apos;)</errorConditionFormula>
        <errorMessage>Illegal_Characters_in_User_Story_Title can cause failures in Commit Files:
Must not include # character</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_have_Active_Deployment_Flow</fullName>
        <active>true</active>
        <description>Must_have_Active_Deployment_Flow</description>
        <errorConditionFormula>(NOT(ISBLANK(copado__Release__c)) &amp;&amp; NOT(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Active__c)) ||( NOT(ISBLANK( copado__Project__c )) &amp;&amp; 
NOT( copado__Project__r.copado__Deployment_Flow__r.copado__Active__c))</errorConditionFormula>
        <errorMessage>Must_have_Active_Deployment_Flow on the related Project or Release -- It&apos;s dangerous to commit files if the Copado Deployment Flow is not Active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Cancellation_reason_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  TEXT(copado__Status__c)==&quot;Cancelled&quot;,
  ISBLANK(copado__Cancellation_Reason__c)
)</errorConditionFormula>
        <errorDisplayField>copado__Cancellation_Reason__c</errorDisplayField>
        <errorMessage>A cancellation reason must be given.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Promote_User_Story_Apex_validation</fullName>
        <active>false</active>
        <description>If User Story has apex code, validate that the minimum code coverage has been met.</description>
        <errorConditionFormula>AND(
  copado__Has_Apex_Code__c = true,
  PRIORVALUE(copado__Promote_Change__c) = false, 
  copado__Promote_Change__c = true,
  OR(
    ISNULL(copado__Apex_Code_Coverage__c),
    ISNULL(copado__Minimum_Apex_Code_Coverage__c),
    copado__Apex_Code_Coverage__c &lt; copado__Minimum_Apex_Code_Coverage__c
  )
)</errorConditionFormula>
        <errorMessage>This User Story does not meet the required Apex coverage threshold to be promoted.</errorMessage>
    </validationRules>
</CustomObject>